@@ -1466,9 +1466,9 @@ table.messageBoard th.forums{width:25%;}
 #chatter-panel .thereIsMore{text-shadow:0 1px 0 rgba(255, 255, 255, 0.4);}
 #chatter-panel .help-block{color:#ccc;font-family:"CabinRegular",Arial,sans-serif;}
 #chatter-panel .timeago{font-family:"CabinRegular",Arial,sans-serif;display:block;}
-#chatter-wrapper.active,#chatter-wrapper.active a{background:#aaaaaa url('../img/vertical_stripes.png') top left repeat !important;position:relative;z-index:1;margin:0;}
-#chatter-wrapper.active{bottom:-0.9em;}
-#chatter-wrapper.active a{bottom:1.05em;color:#fff !important;text-shadow:none !important;}#chatter-wrapper.active a:after{display:none !important;}
+#chatter-wrapper.active,#chatter-wrapper.active a, #myprofile-wrapper.active, #myprofile-wrapper.active a{background:#aaaaaa url('../img/vertical_stripes.png') top left repeat !important;position:relative;z-index:1;margin:0;}
+#chatter-wrapper.active, #myprofile-wrapper.active {bottom:-0.9em;}
+#chatter-wrapper.active a, #myprofile-wrapper.active a{bottom:1.05em;color:#fff !important;text-shadow:none !important;}#chatter-wrapper.active a:after{display:none !important;}
 #chatter-user-info{color:#8f806f;margin:0 0 30px 0;}#chatter-user-info a{color:#000000;}#chatter-user-info a:hover{text-decoration:underline;}
 #chatter-user-info img{float:left;margin-right:10px;}
 #chatter-user-info .user-avatar{width:35px;position:relative;float:left;display:block;margin-bottom:10px;}#chatter-user-info .user-avatar .avatar{width:35px;}
